<resources>
    <string name="app_name">T(W)O DO</string>
    <string name="title_activity_to_do_container" translatable="false">ToDoContainerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_to_do_list" translatable="false">ToDoListActivity</string>
    <string name="title_activity_categories_management" translatable="false">CategoriesManagementActivity</string>
    <string name="transfer_via_bluetooth">Transfer via bluetooth</string>
    <string name="select_language">Change language</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!---Navbar-Text-->
    <string name="navbar_done">Done</string>
    <string name="navbar_deleted">Deleted</string>
    <string name="navbar_to_do">To Do</string>
    <string name="navbar_categories">Categories</string>

    <!---Categories Management Side-->
    <string name="cat_management_title">Categories</string>
    <string name="cat_managment_creation_dialog_title">Add New Category</string>
    <string name="cat_managment_creation_dialog_body">Please enter the name for the new category</string>
    <string name="cat_managment_change_name_dialog_title">Change category name</string>
    <string name="cat_managment_change_name_dialog_body">Please enter a new name for the category</string>
    <string name="cat_managment_deletion_dialog_title">Delete category</string>
    <string name="cat_managment_deletion_dialog_body">Are you sure you want to\ndelete this category</string>
    <string name="cat_dialog_width">Name for new category too long!</string>

    <!---Bluetooth Side-->
    <string name="bluetooth_title">Bluetooth Transfer</string>
    <string name="bluetooth_role">Role:</string>
    <string name="bluetooth_sender">sender</string>
    <string name="bluetooth_receiver">receiver</string>
    <string name="bluetooth_information_text">Press Bluetooth icon to start transfer process</string>
    <string name="bluetooth_discovered_devices_title_1">Discovered devices</string>
    <string name="bluetooth_discovered_devices_title_2">Paired Devices</string>
    <string name="bluetooth_discovered_devices_body_1">Please choose a paired device</string>
    <string name="bluetooth_discovered_devices_body_2">Please wait and choose a discovered device</string>
    <string name="bluetooth_discovered_devices_discover_devices_btn">DISCOVER FURHTER DEVICES</string>
    <string name="bluetooth_inform_user_error">Error while enabling bluetooth</string>
    <string name="bluetooth_inform_user_enabled">Bluetooth enabled, discoverable for </string>
    <string name="bluetooth_inform_user_query">Querying paired devices</string>
    <string name="bluetooth_inform_user_start">Bluetooth discovery has started</string>
    <string name="bluetooth_inform_user_stop">Bluetooth discovery has stopped</string>
    <string name="bluetooth_inform_user_no_device">No device has been selected</string>
    <string name="bluetooth_inform_user_error_1">Error with connection</string>
    <string name="bluetooth_inform_user_error_2">Error while transfering data</string>
    <string name="bluetooth_inform_user_error_3">Device does not support bluetooth</string>
    <string name="bluetooth_inform_user_error_4">Error while establishing connection</string>
    <string name="bluetooth_inform_user_error_5">Error while receiving data</string>
    <string name="bluetooth_inform_user_error_6">No connection was requested</string>
    <string name="bluetooth_inform_user_connect">Connected to: </string>
    <string name="bluetooth_inform_user_disconnected">Disconnected</string>
    <string name="bluetooth_inform_user_connected">"Connected"</string>
    <string name="bluetooth_inform_user_turned_off">Bluetooth turned off</string>
    <string name="bluetooth_inform_user_waiting">Device waits for connection attempt</string>
    <string name="bluetooth_process_execution_failed">Process execution failed</string>
    <string name="bluetooth_waiting_for_transfer">Waiting for transmitted data</string>
    <string name="bt_attachments_sent">Attachments sent</string>
    <string name="bt_categories_sent">Categories sent</string>
    <string name="bt_entries_sent">To-Do-Entries sent</string>
    <string name="bt_attachments_received">Attachments received</string>
    <string name="bt_categories_received">Categories received</string>
    <string name="bt_entries_received">To-Do-Entries received</string>

    <!---entry creation/adaptation page-->
    <string name="add_entry_page_title">Add Entry</string>
    <string name="add_entry_page_description">Description</string>
    <string name="add_entry_page_default">Default</string>
    <string name="add_entry_page_add_category">ADD CATEGORY</string>
    <string name="add_entry_page_date">Date</string>
    <string name="add_entry_page_no_reminder">No reminder</string>
    <string name="add_entry_page_daily_reminder">Daily</string>
    <string name="add_entry_page_weekly_reminder">Weekly</string>
    <string name="add_entry_page_monthly_reminder">Monthly</string>
    <string name="add_entry_page_yearly_reminder">Yearly</string>
    <string name="add_entry_page_specific_reminder">Specific date</string>
    <string name="add_entry_page_specific_interval">Specific interval</string>
    <string name="add_entry_page_further_information">FURTHER INFORMATION</string>
    <string name="add_entry_page_less_information">LESS INFORMATION</string>
    <string name="add_entry_page_record_audio">RECORD AUDIO</string>
    <string name="add_entry_page_record_image">TAKE PHOTO</string>
    <string name="add_entry_page_title_2">Title</string>
    <string name="add_entry_page_stop_recording_audio">STOP RECORDING AUDIO</string>
    <string name="add_entry_page_information_max_recordings">The maximum number of recordings has been reached</string>
    <string name="add_entry_page_information_enter_name">Please enter a Title for your Entry</string>
    <string name="add_entry_page_information_enter_date">Please enter a Date for your Entry</string>
    <string name="default_category_name">New Category</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>

    <!---Edit Entry Page-->
    <string name="edit_entry_page_Title">Edit Entry</string>

    <!--Notifications-->
    <string name="notifications_this_is_a_reminder">This is a reminder that this activity has to be done until </string>
    <string name="tomorrow">tomorrow</string>
    <string name="today">today</string>
    <string name="the_day_after_tomorrow">the day after tomorrow</string>
    <string name="notifications_reminder_for">Reminder for </string>
    <string name="language_is_stupid_2">-</string>

    <!---Akzeptieren/Ablehnen von Dialogen-->
    <string name="dialog_accept">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_agree">Yes</string>
    <string name="dialog_disagree">No</string>

    <!--Creation/Manipulation Site-->
    <string name="photo_count">%d picture(s) attached</string>
    <string name="info_img_load_error">Image could not be loaded. Was it manually deleted?</string>
    <string name="delete_photo_title">Delete Photograph</string>
    <string name="delete_photo">Are you sure you want to\ndelete the selected photograph?</string>

    <string name="channel_descritption">This channel is used to transmit the reminders for the activities</string>
    <string name="all_categories">All Categories</string>
    <string name="lang_german">German</string>
    <string name="lang_english">English</string>
    <string name="lang_french">French</string>
    <string name="lang_spanish">Spanish</string>

    <string name="sorting_1">Due Date ⋀</string>
    <string name="sorting_2">Due Date ⋁</string>
    <string name="sorting_3">Priority ⋀</string>
    <string name="sorting_4">Priority ⋁</string>

    <string name="choose_language_title">Choose Language</string>
    <string name="language_is_stupid">-</string>
    <string name="notifications_stupid_language_3">-</string>
</resources>
