<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llDialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg_text_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/cat_managment_change_name_dialog_title"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="102dp"
        android:paddingRight="10dp"
        android:text="@string/cat_managment_change_name_dialog_body"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewCatName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="14sp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/newCatDlgBtnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_dlg_btn_cancel"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_cancel"
            android:textSize="12sp" />

        <Button
            android:id="@+id/newCatDlgBtnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/ic_dlg_btn_ok"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/dialog_accept"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>